--- a/aspnet-core/src/Xhznl.HelloAbp.DbMigrator/Xhznl.HelloAbp.DbMigrator.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.DbMigrator/Xhznl.HelloAbp.DbMigrator.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Volo.Abp.Autofac" Version="3.0.5" />
     <ProjectReference Include="..\Xhznl.HelloAbp.Application.Contracts\Xhznl.HelloAbp.Application.Contracts.csproj" />
     <ProjectReference Include="..\Xhznl.HelloAbp.EntityFrameworkCore.DbMigrations\Xhznl.HelloAbp.EntityFrameworkCore.DbMigrations.csproj" />
+    <ProjectReference Include="..\Xhznl.HelloAbp.EntityFrameworkCore.DbMigrationsForIdsDB\Xhznl.HelloAbp.EntityFrameworkCore.DbMigrationsForIds.csproj" />
   </ItemGroup>
 
 </Project>
