--- a/aspnet-core/src/Xhznl.HelloAbp.IdentityServer/Xhznl.HelloAbp.IdentityServer.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.IdentityServer/Xhznl.HelloAbp.IdentityServer.csproj
@@ -47,6 +47,7 @@
     <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="3.0.5" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="3.0.5" />
     <ProjectReference Include="..\Xhznl.HelloAbp.EntityFrameworkCore.DbMigrations\Xhznl.HelloAbp.EntityFrameworkCore.DbMigrations.csproj" />
+    <ProjectReference Include="..\Xhznl.HelloAbp.EntityFrameworkCore.DbMigrationsForIdsDB\Xhznl.HelloAbp.EntityFrameworkCore.DbMigrationsForIds.csproj" />
   </ItemGroup>
 
 </Project>
