--- a/aspnet-core/src/Xhznl.HelloAbp.IdentityServer/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.IdentityServer/appsettings.json
@@ -4,7 +4,8 @@
     "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;User Id=sa;Password=Password@2020;Database=HelloAbp;MultipleActiveResultSets=true"
+    "Default": "Server=localhost;User Id=sa;Password=Password@2020;Database=HelloAbp;MultipleActiveResultSets=true",
+    "AbpIdentityServer": "Server=localhost;User Id=sa;Password=Password@2020;Database=HelloAbpIds;MultipleActiveResultSets=true"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
