登录，菜单权限

--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "App": {
-    "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200"
+    "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527"
   },
   "ConnectionStrings": {
     "Default": "Server=localhost;User Id=sa;Password=Password@2020;Database=HelloAbp;MultipleActiveResultSets=true"
