--- a/aspnet-core/src/Xhznl.HelloAbp.IdentityServer/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.IdentityServer/appsettings.json
@@ -1,7 +1,7 @@
 {
   "App": {
     "SelfUrl": "https://localhost:44364",
-    "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200"
+    "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527"
   },
   "ConnectionStrings": {
     "Default": "Server=localhost;User Id=sa;Password=Password@2020;Database=HelloAbp;MultipleActiveResultSets=true",
