--- a/aspnet-core/src/Xhznl.HelloAbp.Application/Xhznl.HelloAbp.Application.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.Application/Xhznl.HelloAbp.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyAbp.Abp.SettingUi.Application" Version="1.1.9" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="3.0.5" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="3.0.5" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="3.0.5" />
