--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Xhznl.HelloAbp.Domain.Shared.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Xhznl.HelloAbp.Domain.Shared.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="EasyAbp.Abp.SettingUi.Domain.Shared" Version="1.1.9" />
     <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="3.0.5" />
     <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="3.0.5" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="3.0.5" />
