--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi/Xhznl.HelloAbp.HttpApi.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi/Xhznl.HelloAbp.HttpApi.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyAbp.Abp.SettingUi.HttpApi" Version="1.1.9" />
     <PackageReference Include="Volo.Abp.Account.HttpApi" Version="3.0.5" />
     <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="3.0.5" />
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="3.0.5" />
