add setting module add swagger authrize

--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
@@ -3,8 +3,8 @@
     "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true",
-    "AbpIdentityServer": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true"
+    "Default": "Server=localhost;User Id=sa;Password=Password@2020;Database=HelloAbp;MultipleActiveResultSets=true",
+    "AbpIdentityServer": "Server=localhost;User Id=sa;Password=Password@2020;Database=HelloAbpIds;MultipleActiveResultSets=true"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
