--- a/aspnet-core/src/Xhznl.HelloAbp.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.DbMigrator/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true",
-    "AbpIdentityServer": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbpIds;MultipleActiveResultSets=true"
+    "Default": "Server=localhost;User Id=sa;Password=Password@2020;Database=HelloAbp;MultipleActiveResultSets=true",
+    "AbpIdentityServer": "Server=localhost;User Id=sa;Password=Password@2020;Database=HelloAbpIds;MultipleActiveResultSets=true"
   },
   "IdentityServer": {
     "Clients": {
