--- a/aspnet-core/src/Xhznl.HelloAbp.Domain/Xhznl.HelloAbp.Domain.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain/Xhznl.HelloAbp.Domain.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="3.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Volo\Abp\Identity\" />
+  </ItemGroup>
+
 </Project>
