--- a/aspnet-core/src/Xhznl.HelloAbp.Domain/Xhznl.HelloAbp.Domain.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain/Xhznl.HelloAbp.Domain.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Volo\**" />
+    <EmbeddedResource Remove="Volo\**" />
+    <None Remove="Volo\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Xhznl.HelloAbp.Domain.Shared\Xhznl.HelloAbp.Domain.Shared.csproj" />
   </ItemGroup>
 
@@ -21,10 +27,6 @@
     <PackageReference Include="Volo.Abp.TenantManagement.Domain" Version="3.0.5" />
     <PackageReference Include="Volo.Abp.FeatureManagement.Domain" Version="3.0.5" />
     <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="3.0.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Volo\Abp\Identity\" />
   </ItemGroup>
 
 </Project>
