--- a/aspnet-core/src/Xhznl.HelloAbp.EntityFrameworkCore.DbMigrationsForIdsDB/Xhznl.HelloAbp.EntityFrameworkCore.DbMigrationsForIds.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.EntityFrameworkCore.DbMigrationsForIdsDB/Xhznl.HelloAbp.EntityFrameworkCore.DbMigrationsForIds.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -6,6 +6,18 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Xhznl.HelloAbp</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Xhznl.HelloAbp.EntityFrameworkCore\Xhznl.HelloAbp.EntityFrameworkCore.csproj" />
