--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/Xhznl.HelloAbp.HttpApi.Host.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/Xhznl.HelloAbp.HttpApi.Host.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
@@ -17,10 +17,10 @@
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="3.0.5" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="3.0.5" />
-    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="3.0.5" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="3.0.5" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="3.1.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="3.1.0" />
+    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="3.1.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
