user update bind org tree and update api to set many org

--- a/aspnet-core/test/Xhznl.HelloAbp.TestBase/Xhznl.HelloAbp.TestBase.csproj
+++ b/aspnet-core/test/Xhznl.HelloAbp.TestBase/Xhznl.HelloAbp.TestBase.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Volo\Abp\Identity\" />
+  </ItemGroup>
+
 </Project>
