--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Xhznl.HelloAbp.Domain.Shared.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Xhznl.HelloAbp.Domain.Shared.csproj
@@ -26,11 +26,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Volo\Abp\AuditLogging\Localization\en.json" />
+    <None Remove="Volo\Abp\AuditLogging\Localization\zh-Hans.json" />
     <None Remove="Volo\Abp\Identity\Localization\en.json" />
     <None Remove="Volo\Abp\Identity\Localization\zh-Hans.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Volo\Abp\AuditLogging\Localization\en.json" />
+    <EmbeddedResource Include="Volo\Abp\AuditLogging\Localization\zh-Hans.json" />
     <EmbeddedResource Include="Volo\Abp\Identity\Localization\HelloAbp\en.json" />
     <EmbeddedResource Include="Volo\Abp\Identity\Localization\HelloAbp\zh-Hans.json" />
   </ItemGroup>
