--- a/aspnet-core/src/Xhznl.HelloAbp.IdentityServer/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.IdentityServer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:44364",
+    "SelfUrl": "http://localhost:44364",
     "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527"
   },
   "ConnectionStrings": {
