--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
@@ -10,7 +10,7 @@
     "Configuration": "127.0.0.1"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44364"
+    "Authority": "http://localhost:44364"
   },
   "Settings": {
     "Abp.Mailing.Smtp.Host": "127.0.0.1",
