--- a/aspnet-core/host/Xhznl.HelloAbp.BackgroundJobs.Hangfire.Host/Xhznl.HelloAbp.BackgroundJobs.Hangfire.Host.csproj
+++ b/aspnet-core/host/Xhznl.HelloAbp.BackgroundJobs.Hangfire.Host/Xhznl.HelloAbp.BackgroundJobs.Hangfire.Host.csproj
@@ -8,13 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.SqlServer" Version="1.7.11" />
     <PackageReference Include="Volo.Abp" Version="3.1.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.Autofac" Version="3.1.2" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Xhznl.HelloAbp.Application\Xhznl.HelloAbp.Application.csproj" />
-    <ProjectReference Include="..\..\src\Xhznl.HelloAbp.BackgroundJobs\Xhznl.HelloAbp.BackgroundJobs.csproj" />
+    <ProjectReference Include="..\..\src\Xhznl.HelloAbp.BackgroundJobs.Shared\Xhznl.HelloAbp.BackgroundJobs.Shared.csproj" />
+    <ProjectReference Include="..\..\src\Xhznl.HelloAbp.EntityFrameworkCore.DbMigrations\Xhznl.HelloAbp.EntityFrameworkCore.DbMigrations.csproj" />
     <ProjectReference Include="..\..\src\Xhznl.HelloAbp.EntityFrameworkCore\Xhznl.HelloAbp.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
