inject IStringEncryptionService and comment smtp setting

--- a/aspnet-core/host/Xhznl.HelloAbp.BackgroundJobs.Hangfire.Host/appsettings.json
+++ b/aspnet-core/host/Xhznl.HelloAbp.BackgroundJobs.Hangfire.Host/appsettings.json
@@ -4,11 +4,11 @@
   },
   "Settings": {
     "Abp.Mailing.Smtp.Host": "smtp.qq.com",
-    "Abp.Mailing.Smtp.Port": "587",
+    "Abp.Mailing.Smtp.Port": "25",  //经过测试这里配合SSL一定是587端口,465端口始终就是过不了,也不知咋回事;不使用ssl默认使用25端口
     "Abp.Mailing.Smtp.UserName": "cqfjxhl@qq.com",
-    "Abp.Mailing.Smtp.Password": "",
-    "Abp.Mailing.Smtp.Domain": "smtp.qq.com",
-    "Abp.Mailing.Smtp.EnableSsl": "false",
+    "Abp.Mailing.Smtp.Password": "", //这里使用qq的授权码作为密码,加密过后的密码,因为默认abp密码是加密的
+  "Abp.Mailing.Smtp.Domain": "",
+    "Abp.Mailing.Smtp.EnableSsl": "false",//true-587,false-25
     "Abp.Mailing.Smtp.UseDefaultCredentials": "false",
     "Abp.Mailing.DefaultFromAddress": "cqfjxhl@qq.com",
     "Abp.Mailing.DefaultFromDisplayName": "jonny-xhl"
