--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi/Xhznl.HelloAbp.HttpApi.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi/Xhznl.HelloAbp.HttpApi.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Xhznl.HelloAbp.Application.Contracts\Xhznl.HelloAbp.Application.Contracts.csproj" />
     <ProjectReference Include="..\..\modules\file-management\src\Xhznl.FileManagement.HttpApi\Xhznl.FileManagement.HttpApi.csproj" />
+    <ProjectReference Include="..\..\modules\data-dictionary\src\Xhznl.DataDictionary.HttpApi\Xhznl.DataDictionary.HttpApi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
