--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Xhznl.HelloAbp.Domain.Shared.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Xhznl.HelloAbp.Domain.Shared.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="3.1.2" />
     <ProjectReference Include="..\..\modules\file-management\src\Xhznl.FileManagement.Domain.Shared\Xhznl.FileManagement.Domain.Shared.csproj" />
+    <ProjectReference Include="..\..\modules\data-dictionary\src\Xhznl.DataDictionary.Domain.Shared\Xhznl.DataDictionary.Domain.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
