--- a/aspnet-core/src/Xhznl.HelloAbp.EntityFrameworkCore/Xhznl.HelloAbp.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.EntityFrameworkCore/Xhznl.HelloAbp.EntityFrameworkCore.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Xhznl.HelloAbp.Domain\Xhznl.HelloAbp.Domain.csproj" />
     <ProjectReference Include="..\..\modules\file-management\src\Xhznl.FileManagement.EntityFrameworkCore\Xhznl.FileManagement.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\..\modules\data-dictionary\src\Xhznl.DataDictionary.EntityFrameworkCore\Xhznl.DataDictionary.EntityFrameworkCore.csproj" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="3.1.2" />
