--- a/aspnet-core/src/Xhznl.HelloAbp.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=192.168.99.100,11433;User Id=sa;Password=Password@2020;Database=HelloAbp;MultipleActiveResultSets=true"
+    "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true"
   },
   "IdentityServer": {
     "Clients": {
