--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
@@ -4,7 +4,7 @@
     "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527"
   },
   "ConnectionStrings": {
-    "Default": "Server=192.168.99.100,11433;User Id=sa;Password=Password@2020;Database=HelloAbp;MultipleActiveResultSets=true"
+    "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true"
   },
   "AuthServer": {
     "Authority": "http://localhost:44370"
