--- a/vue-element-admin-i18n/package.json
+++ b/vue-element-admin-i18n/package.json
@@ -28,6 +28,7 @@
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.3",
     "jszip": "3.2.1",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
@@ -53,9 +54,13 @@
     "@vue/cli-service": "4.4.4",
     "@vue/test-utils": "1.0.0-beta.29",
     "autoprefixer": "9.5.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "10.1.0",
     "babel-jest": "23.6.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-preset-env": "^1.7.0",
     "chalk": "2.4.2",
     "chokidar": "2.1.5",
     "connect": "3.6.6",
@@ -64,6 +69,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
+    "lodash-webpack-plugin": "^0.11.5",
     "mockjs": "1.0.1-beta3",
     "plop": "2.3.0",
     "runjs": "4.3.2",
@@ -73,7 +79,8 @@
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.0",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "2.6.10",
+    "webpack": "^4.44.2"
   },
   "browserslist": [
     "> 1%",
