file-management: improved domain layer; added blob system;

--- a/aspnet-core/modules/file-management/host/Xhznl.FileManagement.HttpApi.Host/appsettings.json
+++ b/aspnet-core/modules/file-management/host/Xhznl.FileManagement.HttpApi.Host/appsettings.json
@@ -3,8 +3,7 @@
     "CorsOrigins": "https://*.FileManagement.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true",
-    "AbpIdentityServer": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbpIds;MultipleActiveResultSets=true"
+    "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true"
     //"Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=FileManagement_Main;Trusted_Connection=True;MultipleActiveResultSets=true",
     //"FileManagement": "Server=(LocalDb)\\MSSQLLocalDB;Database=FileManagement_Module;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
