--- a/aspnet-core/modules/file-management/src/Xhznl.FileManagement.Domain/Xhznl.FileManagement.Domain.csproj
+++ b/aspnet-core/modules/file-management/src/Xhznl.FileManagement.Domain/Xhznl.FileManagement.Domain.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Ddd.Domain" Version="3.1.0" />
+    <PackageReference Include="Volo.Abp.BlobStoring" Version="3.1.2" />
+    <PackageReference Include="Volo.Abp.Ddd.Domain" Version="3.1.2" />
     <ProjectReference Include="..\Xhznl.FileManagement.Domain.Shared\Xhznl.FileManagement.Domain.Shared.csproj" />
   </ItemGroup>
 
