--- a/aspnet-core/modules/file-management/test/Xhznl.FileManagement.Application.Tests/Xhznl.FileManagement.Application.Tests.csproj
+++ b/aspnet-core/modules/file-management/test/Xhznl.FileManagement.Application.Tests/Xhznl.FileManagement.Application.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.BlobStoring.FileSystem" Version="3.1.2" />
     <ProjectReference Include="..\..\src\Xhznl.FileManagement.Application\Xhznl.FileManagement.Application.csproj" />
     <ProjectReference Include="..\Xhznl.FileManagement.Domain.Tests\Xhznl.FileManagement.Domain.Tests.csproj" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
