--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/Xhznl.HelloAbp.HttpApi.Host.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/Xhznl.HelloAbp.HttpApi.Host.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="3.1.2" />
+    <PackageReference Include="Volo.Abp.BlobStoring.FileSystem" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
