--- a/aspnet-core/src/Xhznl.HelloAbp.BackgroundJobs.Shared/Xhznl.HelloAbp.BackgroundJobs.Shared.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.BackgroundJobs.Shared/Xhznl.HelloAbp.BackgroundJobs.Shared.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.24" />
     <PackageReference Include="Volo.Abp.AspNetCore" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.Emailing" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.Threading" Version="3.1.2" />
