fileManagement module self-host

--- a/aspnet-core/modules/file-management/host/Xhznl.FileManagement.HttpApi.Host/appsettings.json
+++ b/aspnet-core/modules/file-management/host/Xhznl.FileManagement.HttpApi.Host/appsettings.json
@@ -3,14 +3,15 @@
     "CorsOrigins": "https://*.FileManagement.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true"
-    //"Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=FileManagement_Main;Trusted_Connection=True;MultipleActiveResultSets=true",
-    //"FileManagement": "Server=(LocalDb)\\MSSQLLocalDB;Database=FileManagement_Module;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true",
+    "Default": "Server=localhost;User Id=sa;Password=123456;Database=FileManagement_Main;MultipleActiveResultSets=true",
+    "FileManagement": "Server=localhost;User Id=sa;Password=123456;Database=FileManagement_Module;MultipleActiveResultSets=true"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
   },
   "AuthServer": {
     "Authority": "https://localhost:44314/"
+    //"Authority": "http://localhost:44370/"
   }
 }
