--- a/aspnet-core/modules/file-management/host/Xhznl.FileManagement.IdentityServer/appsettings.json
+++ b/aspnet-core/modules/file-management/host/Xhznl.FileManagement.IdentityServer/appsettings.json
@@ -5,8 +5,8 @@
   },
   "AppSelfUrl": "https://localhost:44314/",
   "ConnectionStrings": {
-    "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true"
-    //"Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=FileManagement_Main;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true"
+    "Default": "Server=localhost;User Id=sa;Password=123456;Database=FileManagement_Main;MultipleActiveResultSets=true"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
