--- a/aspnet-core/modules/file-management/host/Xhznl.FileManagement.HttpApi.Host/Xhznl.FileManagement.HttpApi.Host.csproj
+++ b/aspnet-core/modules/file-management/host/Xhznl.FileManagement.HttpApi.Host/Xhznl.FileManagement.HttpApi.Host.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Volo.Abp.BlobStoring.FileSystem" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,5 +40,7 @@
     <EmbeddedResource Remove="Logs\**" />
     <None Remove="Logs\**" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
