--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Xhznl.HelloAbp.Domain.Shared.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Xhznl.HelloAbp.Domain.Shared.csproj
@@ -37,6 +37,8 @@
   <ItemGroup>
     <EmbeddedResource Include="Volo\Abp\AuditLogging\Localization\en.json" />
     <EmbeddedResource Include="Volo\Abp\AuditLogging\Localization\zh-Hans.json" />
+    <EmbeddedResource Include="Volo\Abp\IdentityServer\Localization\en.json" />
+    <EmbeddedResource Include="Volo\Abp\IdentityServer\Localization\zh-Hans.json" />
     <EmbeddedResource Include="Volo\Abp\Identity\Localization\HelloAbp\en.json" />
     <EmbeddedResource Include="Volo\Abp\Identity\Localization\HelloAbp\zh-Hans.json" />
   </ItemGroup>
