add IdentityResourceAppService and add customer Ids4Repository

--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
@@ -1,7 +1,7 @@
 {
   "App": {
     "SelfUrl": "http://localhost:44370",
-    "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527"
+    "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527,http://localhost:8000"
   },
   "ConnectionStrings": {
     "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true"
