--- a/aspnet-core/src/Xhznl.HelloAbp.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.DbMigrator/appsettings.json
@@ -11,7 +11,18 @@
       },
       "HelloAbp_App": {
         "ClientId": "HelloAbp_App",
-        "ClientSecret": "1q2w3e*"
+        "ClientSecret": "1q2w3e*",
+        "RootUrl": "http://localhost:9527"
+      },
+      "HelloAbp_BlazorServerTiered": {
+        "ClientId": "HelloAbp_BlazorServerTiered",
+        "ClientSecret": "1q2w3e*",
+        "RootUrl": "https://localhost:44314"
+      },
+      "HelloAbp_Swagger": {
+        "ClientId": "HelloAbp_Swagger",
+        "ClientSecret": "1q2w3e*",
+        "RootUrl": "https://localhost:44367"
       }
     }
   }
