--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
@@ -1,13 +1,18 @@
 {
   "App": {
     "SelfUrl": "http://localhost:44370",
-    "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527"
+    "ClientUrl": "http://localhost:9527",
+    "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527",
+    "RedirectAllowedUrls": "http://localhost:4200,http://localhost:9527"
   },
   "ConnectionStrings": {
     "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true"
   },
   "AuthServer": {
-    "Authority": "http://localhost:44370"
+    "Authority": "http://localhost:44370",
+    "RequireHttpsMetadata": "false",
+    "SwaggerClientId": "NewBook_Swagger",
+    "SwaggerClientSecret": "1q2w3e*"
   },
   "Settings": {
     "Abp.Mailing.Smtp.Host": "127.0.0.1",
@@ -19,5 +24,8 @@
     "Abp.Mailing.Smtp.UseDefaultCredentials": "true",
     "Abp.Mailing.DefaultFromAddress": "noreply@abp.io",
     "Abp.Mailing.DefaultFromDisplayName": "ABP application"
+  },
+  "StringEncryption": {
+    "DefaultPassPhrase": "ZPUU8lU4wIL12PHE"
   }
 }
