--- a/aspnet-core/host/Xhznl.HelloAbp.BackgroundJobs.Hangfire.Host/Xhznl.HelloAbp.BackgroundJobs.Hangfire.Host.csproj
+++ b/aspnet-core/host/Xhznl.HelloAbp.BackgroundJobs.Hangfire.Host/Xhznl.HelloAbp.BackgroundJobs.Hangfire.Host.csproj
@@ -1,18 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp5.0</TargetFramework>
     <RootNamespace>Xhznl.HelloAbp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hangfire.SqlServer" Version="1.7.11" />
-    <PackageReference Include="Volo.Abp" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="3.1.2" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.7.23" />
+    <PackageReference Include="Volo.Abp" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="4.3.3" />
   </ItemGroup>
 
   <ItemGroup>
