--- a/aspnet-core/modules/file-management/host/Xhznl.FileManagement.IdentityServer/Xhznl.FileManagement.IdentityServer.csproj
+++ b/aspnet-core/modules/file-management/host/Xhznl.FileManagement.IdentityServer/Xhznl.FileManagement.IdentityServer.csproj
@@ -1,45 +1,48 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp5.0</TargetFramework>
     <RootNamespace>Xhznl.FileManagement</RootNamespace>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
     <UserSecretsId>Xhznl.FileManagement-c2d31439-b723-48e2-b061-5ebd7aeb6010</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="3.1.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.6" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.Account.Application" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.IdentityServer.EntityFrameworkCore" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.Identity.Application" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="3.1.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.Account.Application" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.IdentityServer.EntityFrameworkCore" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.Identity.Application" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="4.3.3" />
     <ProjectReference Include="..\..\src\Xhznl.FileManagement.Application.Contracts\Xhznl.FileManagement.Application.Contracts.csproj" />
     <ProjectReference Include="..\Xhznl.FileManagement.Host.Shared\Xhznl.FileManagement.Host.Shared.csproj" />
   </ItemGroup>
