1. Fixed the Settings management module 2. Swagger 3. Change IdentityServerValidate to Jwt 4. Host add abp-libs 5. Add AbpSettingModule

--- a/aspnet-core/src/Xhznl.HelloAbp.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.DbMigrator/appsettings.json
@@ -7,7 +7,7 @@
       "HelloAbp_Web": {
         "ClientId": "HelloAbp_Web",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44352"
+        "RootUrl": "http://localhost:44370"
       },
       "HelloAbp_App": {
         "ClientId": "HelloAbp_App",
@@ -22,7 +22,7 @@
       "HelloAbp_Swagger": {
         "ClientId": "HelloAbp_Swagger",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44367"
+        "RootUrl": "http://localhost:44370"
       }
     }
   }
