--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Host/appsettings.json
@@ -2,8 +2,8 @@
   "App": {
     "SelfUrl": "http://localhost:44370",
     "ClientUrl": "http://localhost:9527",
-    "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527",
-    "RedirectAllowedUrls": "http://localhost:4200,http://localhost:9527"
+    "CorsOrigins": "https://*.HelloAbp.com,http://localhost:4200,http://localhost:9527,http://localhost:9528",
+    "RedirectAllowedUrls": "http://localhost:4200,http://localhost:9527,http://localhost:44370"
   },
   "ConnectionStrings": {
     "Default": "Server=localhost;User Id=sa;Password=123456;Database=HelloAbp;MultipleActiveResultSets=true"
@@ -11,7 +11,7 @@
   "AuthServer": {
     "Authority": "http://localhost:44370",
     "RequireHttpsMetadata": "false",
-    "SwaggerClientId": "NewBook_Swagger",
+    "SwaggerClientId": "HelloAbp_Swagger",
     "SwaggerClientSecret": "1q2w3e*"
   },
   "Settings": {
