--- a/aspnet-core/src/Xhznl.HelloAbp.Application.Contracts/Xhznl.HelloAbp.Application.Contracts.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.Application.Contracts/Xhznl.HelloAbp.Application.Contracts.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.TenantManagement.Application.Contracts" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.FeatureManagement.Application.Contracts" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="4.3.3" />
   </ItemGroup>
 
 </Project>
