--- a/aspnet-core/src/Xhznl.HelloAbp.Application/Xhznl.HelloAbp.Application.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.Application/Xhznl.HelloAbp.Application.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="4.3.3" />
   </ItemGroup>
 
 </Project>
