--- a/aspnet-core/src/Xhznl.HelloAbp.Domain/Xhznl.HelloAbp.Domain.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain/Xhznl.HelloAbp.Domain.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.Emailing" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.IdentityServer.Domain" Version="4.3.3" />
