--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Client/Xhznl.HelloAbp.HttpApi.Client.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi.Client/Xhznl.HelloAbp.HttpApi.Client.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi.Client" Version="4.3.3" />
   </ItemGroup>
 
 </Project>
