--- a/aspnet-core/src/Xhznl.HelloAbp.HttpApi/Xhznl.HelloAbp.HttpApi.csproj
+++ b/aspnet-core/src/Xhznl.HelloAbp.HttpApi/Xhznl.HelloAbp.HttpApi.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="4.3.3" />
+    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="4.3.3" />
   </ItemGroup>
 
 </Project>
